did some fixes, added rudimentary UI

--- a/chess/templates/base.html
+++ b/chess/templates/base.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>chess</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}"/>
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 </head>
 <body>
 {% block content %}{% endblock %}
+{% block extraJS %}{% endblock %}
 </body>
 </html>
