--- a/static/css/base.css
+++ b/static/css/base.css
@@ -16,9 +16,32 @@
     border: dashed thin black;
     float: left;
 }
+.alpha_tile {
+    width: 100px;
+    height: 50px;
+    border: dashed thin black;
+    float: left;
+    text-align: center;
+    line-height: 50px;
+}
+.corner_tile {
+    width: 50px;
+    height: 50px;
+    border: dashed thin black;
+    float: left;
+}
+.num_tile {
+    width: 50px;
+    height: 100px;
+    border: dashed thin black;
+    float: left;
+    text-align: center;
+    line-height: 100px;
+}
+
 .row {
     display:inline-block;
 }
 #board {
-    max-width: 850px;
+    width: 900px;
 }
