ajax play button

--- a/chess/templates/game.html
+++ b/chess/templates/game.html
@@ -2,59 +2,87 @@
 {% load dictionary %}
 
 {% block content %}
-<table>
-<tr>
 
-<td>
-  <table class="game_stats">
+<div class="board">
+  <div id="board-content">
+    {% with game.moves|first as move %}
+      {% with move.board_state as board_state %}
+        {{ block.super }}
+      {% endwith %}
+    {% endwith %}
+  </div>
+</div>
+
+<div class="moves center">
+  <table>
+    {% for move in game.moves %}
+      <tr><td><a href="" class="move-btn" game-id="{{move.game.id}}" move-id="{{ forloop.counter }}">{{ move }}</a></td></tr>
+    {% endfor %}
+  </table>
+</div>
+
+<div class="controls">
+  <span class="glyphicon glyphicon-step-backward"></span>
+  <span class="glyphicon glyphicon-backward"></span>
+  <span id="control_play" class="glyphicon glyphicon-play"></span>
+  <span class="glyphicon glyphicon-stop"></span>
+  <span class="glyphicon glyphicon-forward"></span>
+  <span class="glyphicon glyphicon-step-forward"></span>
+</div>
+
+<div class="game_stats">
+  <table>
     <tr class="row1"><td class="key">White:</td><td class="value">{{game.white_player}}</td></tr>
     <tr class="row2"><td class="key">Black:</td><td class="value">{{game.black_player}}</td></tr>
     <tr class="row1"><td class="key">Game:</td> <td class="value">{{game.id}}</td></tr>
     <tr class="row2"><td class="key">Moves:</td><td class="value">{{game.moves_count}}</td></tr>
   </table>
-</td>
+</div>
 
-<td>
-  <div style="float:center;">
-    <div id="board-content">
-      {% with game.moves|first as move %}
-        {% with move.board_state as board_state %}
-          {{ block.super }}
-        {% endwith %}
-      {% endwith %}
-    </div>
-    <div class="controls"></div>
-  </div>
-</td>
-
-<td>
-  <table class="moves">
-  {% for move in game.moves %}
-    <tr><td><a href="" class="move-btn" game-id="{{move.game.id}}" move-id="{{ forloop.counter }}">{{ move }}</a></td></tr>
-  {% endfor %}
-  </table>
-</td>
-
-</tr>
-</table>
 {% endblock %}
 
 {% block extraJS %}
 <script>
+var game_id = {{ game.id }};
+var move_index = 1;
+var max_move_index = {{ game.moves_count }};
+var playing = false;
 $(document).ready(function(){
+
+  function set_board_state(index){
+    $.ajax({
+      type: "GET",
+      url: "/game/"+game_id+"/move/"+index,
+      success:function(result){
+          $("#board-content").html(result);
+      }
+    });
+    move_index = index;
+  }
+
   $(".move-btn").click(function(e){
     e.preventDefault();
     console.log(this);
     game_id = $(this).attr('game-id');
     move_index = $(this).attr('move-id');
-    $.ajax({
-      type: "GET",
-      url: "/game/"+game_id+"/move/"+move_index,
-      success:function(result){
-          $("#board-content").html(result);
-      }
-    });
+    set_board_state(move_index);
   });
+
+  $("#control_play").click(function(e){
+    console.log("playing");
+    playing = true;
+    play();
+  });
+
+  function play(){
+    console.log("playing " + move_index);
+    set_board_state(move_index);
+    move_index++;
+    if(move_index <= max_move_index){
+      setTimeout(function(){play();}, 1000);
+    }
+  }
+
 });
 </script>
 {% endblock %}
