--- a/chess/templates/base.html
+++ b/chess/templates/base.html
@@ -5,9 +5,12 @@
     <title>chess</title>
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 </head>
 <body>
-{% block content %}{% endblock %}
+<div class="content">
+  {% block content %}{% endblock %}
+</div>
 {% block extraJS %}{% endblock %}
 </body>
 </html>
